feat: iOS端表单页面新增输入法操作按钮

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,6 +11,7 @@
   "copy": "copy",
   "home": "home",
   "run": "run",
+  "done": "done",
   "settings": "settings",
   "language": "language",
   "languageName": "english",
@@ -99,9 +100,7 @@
   "newPassword": "new password",
   "passwordConfirm": "confirm password",
   "workflowRunsMaxDaysRetention": "max days retention of workflow history runs",
-  "workflowRunsMaxDaysRetentionPlaceholder": "Please enter the maximum retention days of workflow history runs",
   "expiredCertificatesMaxDaysRetention": "max days retention of expired certificates",
-  "expiredCertificatesMaxDaysRetentionPlaceholder": "Please enter the maximum retention days of expired certificates",
   "persistence": "persistence",
   "diagnostics": "diagnostics",
   "account": "account",
