--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -8,7 +8,10 @@
   "save": "保存",
   "add": "添加",
   "edit": "编辑",
+  "copy": "复制",
   "home": "首页",
+  "run": "运行",
+  "done": "完成",
   "settings": "设置",
   "language": "语言",
   "languageName": "中文",
@@ -21,6 +24,7 @@
   "host": "主机",
   "url": "链接",
   "user": "用户",
+  "servers": "servers",
   "username": "用户名",
   "password": "密码",
   "backgroundLock": "后台锁定",
@@ -63,8 +67,6 @@
   "expiringSoon": "即将过期",
   "expired": "已过期",
   "unexpired": "未过期",
-  "copy": "复制",
-  "run": "运行",
   "activeTitle": "是否启用",
   "workflow": "工作流",
   "startedAt": "开始时间",
