feat: 添加版本更新提示

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -147,5 +147,6 @@
   "hostEndsErrorMsg": "Should not end with a \"/\"",
   "openInBrowser": "open in browser",
   "copyUrl": "copy url",
-  "shareUrl": "share url"
+  "shareUrl": "share url",
+  "alreadyUpToDate": "already up to date"
 }
