feat: 桌面端支持运行本地Certimate服务

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -148,5 +148,6 @@
   "openInBrowser": "open in browser",
   "copyUrl": "copy url",
   "shareUrl": "share url",
-  "alreadyUpToDate": "already up to date"
+  "alreadyUpToDate": "already up to date",
+  "localServer": "local service"
 }
