--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -149,5 +149,7 @@
   "copyUrl": "copy url",
   "shareUrl": "share url",
   "alreadyUpToDate": "already up to date",
-  "localServer": "local service"
+  "localServer": "local service",
+  "certificatesWarningDaysBeforeExpire": "certificate expiration warning threshold",
+  "saveSuccess": "save success"
 }
