feat: 优化英文国际化资源

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -57,7 +57,7 @@
   "changePassword": "change password",
   "configureCertificateAuthorities": "configure certificate authorities",
   "workflowRuns": "workflow runs",
-  "workflowsSearchPlaceholder": "search by workflow name ...",
+  "workflowsSearchPlaceholder": "Search by workflow name ...",
   "all": "all",
   "active": "active",
   "inactive": "inactive",
@@ -71,7 +71,7 @@
   "workflow": "workflow",
   "startedAt": "started at",
   "createdAt": "created at",
-  "endedAt": "endedAt at",
+  "endedAt": "ended at",
   "status": "status",
   "name": "name",
   "trigger": "trigger",
@@ -139,7 +139,7 @@
   "executeWorkflowSuccess": "Running... Please check the history later",
   "cancelWorkflowRun": "Cancel workflow run",
   "cancelWorkflowRunTip": "Are you sure to cancel this run?",
-  "deleteWorkflowRunTip": "Are you sure want to delete this workflow run? <br>This action cannot be undone.",
+  "deleteWorkflowRunTip": "Are you sure want to delete this workflow run?\nThis action cannot be undone.",
   "workflowRunLogs": "workflow run logs",
   "workflowRunDesc": "Triggered {trigger} at {startedAt}. Time cost: {timeCost}.",
   "scheduled": "scheduled",
@@ -151,7 +151,7 @@
   "alreadyUpToDate": "already up to date",
   "localServer": "local service",
   "certificatesWarningDaysBeforeExpire": "certificate expiration warning threshold",
-  "saveSuccess": "save success",
+  "saveSuccess": "saved successfully",
   "presetTemplate": "presets",
   "notifyTemplate": "notify template",
   "scriptTemplate": "script template",
