feat: 添加表单字段辅助文本支持

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -151,6 +151,15 @@
   "alreadyUpToDate": "already up to date",
   "localServer": "local service",
   "certificatesWarningDaysBeforeExpire": "certificate expiration warning threshold",
+  "certificatesWarningDaysBeforeExpireHelper": "this option determines how long before expiration a certificate is considered \"expiring soon\"",
+  "workflowRunsMaxDaysRetentionHelper": "set to 0 to keep forever and never clean up automatically",
+  "expiredCertificatesMaxDaysRetentionHelper": "set to 0 to keep forever and never clean up automatically",
+  "accountEmailHelper": "sign in with your email address",
+  "passwordMinLengthHelper": "password must be at least 10 characters",
+  "savePasswordHelper": "store password in system secure storage for future logins",
+  "localServerHelper": "automatically download and start a local certimate service",
+  "serverHostHelper": "example: http://127.0.0.1:8090",
+  "serverDisplayNameHelper": "used to distinguish multiple servers in this app",
   "saveSuccess": "saved successfully",
   "presetTemplate": "presets",
   "notifyTemplate": "notify template",
