--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -151,6 +151,15 @@
   "alreadyUpToDate": "已经是最新版本了",
   "localServer": "本地服务",
   "certificatesWarningDaysBeforeExpire": "证书即将过期预警阈值",
+  "certificatesWarningDaysBeforeExpireHelper": "该选项将决定将证书过期前多久视为「即将过期」",
+  "workflowRunsMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理。建议设置为 180 天以上",
+  "expiredCertificatesMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理",
+  "accountEmailHelper": "使用电子邮箱登录你的账号",
+  "passwordMinLengthHelper": "密码至少 10 个字符",
+  "savePasswordHelper": "将密码存储到系统安全存储中，便于后续自动登录",
+  "localServerHelper": "自动下载并启动本地 Certimate 服务，并自动填充地址",
+  "serverHostHelper": "例如：http://127.0.0.1:8090",
+  "serverDisplayNameHelper": "用于在应用内区分多个服务",
   "saveSuccess": "保存成功",
   "presetTemplate": "预设模版",
   "notifyTemplate": "通知模版",
