feat: 优化组件样式和导航逻辑

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,6 +25,7 @@
   "url": "url",
   "user": "user",
   "servers": "servers",
+  "server": "server",
   "username": "username",
   "password": "password",
   "backgroundLock": "background lock",
