--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -25,6 +25,7 @@
   "url": "链接",
   "user": "用户",
   "servers": "servers",
+  "server": "服务",
   "username": "用户名",
   "password": "密码",
   "backgroundLock": "后台锁定",
@@ -152,7 +153,7 @@
   "localServer": "本地服务",
   "certificatesWarningDaysBeforeExpire": "证书即将过期预警阈值",
   "certificatesWarningDaysBeforeExpireHelper": "该选项将决定将证书过期前多久视为「即将过期」",
-  "workflowRunsMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理。建议设置为 180 天以上",
+  "workflowRunsMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理",
   "expiredCertificatesMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理",
   "accountEmailHelper": "使用电子邮箱登录你的账号",
   "passwordMinLengthHelper": "密码至少 10 个字符",
