feat: 桌面端支持开机启动

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -168,5 +168,6 @@
   "subject": "subject",
   "content": "content",
   "command": "command",
-  "join2": "{one} {two}"
+  "join2": "{one} {two}",
+  "launchAtLogin": "launch at login"
 }
