--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,7 +14,7 @@
   "done": "done",
   "settings": "settings",
   "language": "language",
-  "languageName": "english",
+  "languageName": "English",
   "theme": "theme",
   "brightness": "brightness",
   "system": "system",
@@ -34,8 +34,8 @@
   "privacyBlur": "privacy blur",
   "noCredentialsSetTip": "No device credentials found. Please set up a screen lock or biometric authentication to use this feature.",
   "unlockAppTip": "Please verify your identity to unlock the app.",
-  "enableBackgroundLockTip": "Please verify your identity to enable background lock.",
-  "disableBackgroundLockTip": "Please verify your identity to disable background lock.",
+  "enableBackgroundLockTip": "Please verify your identity to enable background lock",
+  "disableBackgroundLockTip": "Please verify your identity to disable background lock",
   "lockedTip": "The app is locked. Tap the unlock button to proceed.",
   "exitTip": "Tap again to exit the app",
   "desktopExitTip": "Are you sure to exit this program?",
