--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -34,8 +34,8 @@
   "privacyBlur": "后台模糊",
   "noCredentialsSetTip": "当前设备未设置解锁方式，请先设置。",
   "unlockAppTip": "请验证您的身份以解锁应用。",
-  "enableBackgroundLockTip": "请验证您的身份以开启后台锁定功能。",
-  "disableBackgroundLockTip": "请验证您的身份以关闭后台锁定功能。",
+  "enableBackgroundLockTip": "请验证您的身份以开启后台锁定功能",
+  "disableBackgroundLockTip": "请验证您的身份以关闭后台锁定功能",
   "lockedTip": "当前应用已锁定，点击解锁按钮进行解锁。",
   "exitTip": "再按一次退出应用",
   "desktopExitTip": "确定关闭该应用？",
@@ -158,7 +158,7 @@
   "accountEmailHelper": "使用电子邮箱登录你的账号",
   "passwordMinLengthHelper": "密码至少 10 个字符",
   "savePasswordHelper": "将密码存储到系统安全存储中，便于后续自动登录",
-  "localServerHelper": "自动下载并启动本地 Certimate 服务，并自动填充地址",
+  "localServerHelper": "自动下载并启动本地 Certimate 服务",
   "serverHostHelper": "例如：http://127.0.0.1:8090",
   "serverDisplayNameHelper": "用于在应用内区分多个服务",
   "saveSuccess": "保存成功",
