feat: WebView页面添加close菜单

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -169,5 +169,6 @@
   "content": "content",
   "command": "command",
   "join2": "{one} {two}",
-  "launchAtLogin": "launch at login"
+  "launchAtLogin": "launch at login",
+  "closePage": "close page"
 }
