feat: 添加过滤和排序功能

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -20,7 +20,7 @@
   "system": "跟随系统",
   "light": "浅色",
   "dark": "深色",
-  "displayName": "名称",
+  "displayName": "显示名称",
   "host": "主机",
   "url": "链接",
   "user": "用户",
