feat: 支持控制本地服务

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,6 +11,9 @@
   "copy": "copy",
   "home": "home",
   "run": "run",
+  "start": "start",
+  "stop": "stop",
+  "restart": "restart",
   "done": "done",
   "settings": "settings",
   "language": "language",
@@ -150,7 +153,11 @@
   "copyUrl": "copy url",
   "shareUrl": "share url",
   "alreadyUpToDate": "already up to date",
-  "localServer": "local service",
+  "localServer": "local server",
+  "localServerControls": "server controls",
+  "localServerAutoStart": "launch at login",
+  "localServerRunning": "server is running",
+  "localServerNotRunning": "server is not running",
   "certificatesWarningDaysBeforeExpire": "certificate expiration warning threshold",
   "certificatesWarningDaysBeforeExpireHelper": "this option determines how long before expiration a certificate is considered \"expiring soon\"",
   "workflowRunsMaxDaysRetentionHelper": "set to 0 to keep forever and never clean up automatically",
@@ -158,7 +165,7 @@
   "accountEmailHelper": "sign in with your email address",
   "passwordMinLengthHelper": "password must be at least 10 characters",
   "savePasswordHelper": "store password in system secure storage for future logins",
-  "localServerHelper": "automatically download and start a local certimate service",
+  "localServerHelper": "automatically download and start a local certimate server",
   "serverHostHelper": "example: http://127.0.0.1:8090",
   "serverDisplayNameHelper": "used to distinguish multiple servers in this app",
   "saveSuccess": "saved successfully",
