--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -11,6 +11,9 @@
   "copy": "复制",
   "home": "首页",
   "run": "运行",
+  "start": "启动",
+  "stop": "停止",
+  "restart": "重启",
   "done": "完成",
   "settings": "设置",
   "language": "语言",
@@ -151,6 +154,10 @@
   "shareUrl": "分享链接",
   "alreadyUpToDate": "已经是最新版本了",
   "localServer": "本地服务",
+  "localServerControls": "服务控制",
+  "localServerAutoStart": "服务自启动",
+  "localServerRunning": "服务运行中",
+  "localServerNotRunning": "服务未启动",
   "certificatesWarningDaysBeforeExpire": "证书即将过期预警阈值",
   "certificatesWarningDaysBeforeExpireHelper": "该选项将决定将证书过期前多久视为「即将过期」",
   "workflowRunsMaxDaysRetentionHelper": "设置为 0 表示永久保留，不会自动清理",
