feat: 添加打开本地服务文件夹按钮

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -150,6 +150,7 @@
   "manual": "manual",
   "hostEndsErrorMsg": "Should not end with a \"/\"",
   "openInBrowser": "open in browser",
+  "openLocalFolder": "open local folder",
   "copyUrl": "copy url",
   "shareUrl": "share url",
   "alreadyUpToDate": "already up to date",
