--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -150,6 +150,7 @@
   "manual": "手动",
   "hostEndsErrorMsg": "不能以\"/\"结尾",
   "openInBrowser": "在浏览器中打开",
+  "openLocalFolder": "打开本地文件夹",
   "copyUrl": "复制链接",
   "shareUrl": "分享链接",
   "alreadyUpToDate": "已经是最新版本了",
